test/end-to-end/compile-errors/type-annotation-unnecessary.crow
main void()
	x nat = 0::nat
	(info log "{x}"::string)::void
